# ChangeLog for media-video/smplayer2
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  01 Dec 2011; Nikoli <nikoli@lavabit.com> smplayer2-0.7.0_pre20111120.ebuild,
  smplayer2-9999.ebuild:
  update mplayer2 dep

*smplayer2-0.7.0_pre20111120 (21 Nov 2011)

  21 Nov 2011; Nikoli <nikoli@lavabit.com> -files/smplayer-0.6.8-quit.patch,
  -smplayer2-0.7.0_pre20111022.ebuild, -smplayer2-0.7.0_pre20111110.ebuild,
  +smplayer2-0.7.0_pre20111120.ebuild, -files/smplayer2-system-quazip.patch:
  new snapshot, remove old

*smplayer2-0.7.0_pre20111110 (10 Nov 2011)

  10 Nov 2011; Nikoli <nikoli@lavabit.com> +smplayer2-0.7.0_pre20111110.ebuild,
  smplayer2-9999.ebuild, metadata.xml:
  migrate to cmake, new snapshot

  07 Nov 2011; Nikoli <nikoli@lavabit.com> smplayer2-9999.ebuild:
  quit shortcut and bundled quazip are fixed upstream

*smplayer2-9999 (05 Nov 2011)
*smplayer2-0.7.0_pre20111022 (05 Nov 2011)

  05 Nov 2011; Nikoli <nikoli@lavabit.com> +files/smplayer-0.6.8-quit.patch,
  +smplayer2-0.7.0_pre20111022.ebuild, +smplayer2-9999.ebuild,
  +files/smplayer2-system-quazip.patch, +metadata.xml:
  initial ebuilds
