@@ -1,10 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
-	<herd>no-herd</herd>
+	<herd>proxy-maintainers</herd>
 	<maintainer>
 		<email>nikoli@lavabit.com</email>
 		<name>Nikoli</name>
+	</maintainer>
+	<maintainer>
+		<email>maksbotan@gentoo.org</email>
+		<name>Maxim Koltsov</name>
 	</maintainer>
 	<use>
 		<flag name="download-subs">Enable subtitle downloader (requires QuaZip)</flag>
