@@ -1,6 +1,12 @@
 # ChangeLog for media-video/smplayer2
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+*smplayer2-0.7.1_p20120301 (23 Mar 2012)
+
+  23 Mar 2012; Nikoli <nikoli@lavabit.com> +smplayer2-0.7.1_p20120301.ebuild,
+  metadata.xml:
+  version bump
 
   01 Dec 2011; Nikoli <nikoli@lavabit.com> smplayer2-0.7.0_pre20111120.ebuild,
   smplayer2-9999.ebuild:
